Repeat stmtIds on writes crash the server

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Critical - P2
    • 8.2.13, 8.3.9, 7.0.41, 8.0.30, 9.0.0-rc2
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Optimization
    • Fully Compatible
    • ALL
    • v9.0, v8.3, v8.2, v8.0, v7.0
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The write operations stmtIds field is not validated to contain distinct IDs during command validation. That property is only validated in invariants and tasserts on the write path.

      For normal writes, this crashes before the write hits disk. For timeseries collections, the path with the assertion for normal writes is not used, and instead, we have an invariant in the onCommit callback, after the write has been committed.

      We should validate such commands.

            Assignee:
            Vesko Karaganev
            Reporter:
            Vesko Karaganev
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: