SERVER-131326 [v8.3] Validate stmtIds for uniqueness (#58645)

GitOrigin-RevId: e45afcc64f0350122dc1476044d6f2307e202bac