jstests/sharding/internal_txns/retryable_writes_oplog_entries.js
@@ -85,7 +85,7 @@ function verifyOplogEntries(
 
         const writeRes = mongosTestDB.runCommand(writeCmdObj);
         if (customStmtIdsOption == kStmtIdsOption.isRepeated) {
-            assert.commandFailedWithCode(writeRes, 5875600);
+            assert.commandFailedWithCode(writeRes, ErrorCodes.InvalidOptions);
             assert.commandWorked(mongosTestColl.remove({}));
             return;
         }
